@@ -1,3 +1,6 @@
+Upcoming:
+- New 'rftoolsstorage restore' command that you can use to restore a lost modular storage card
+
 1.15-1.1.10:
 - Update to latest McJtyLib
 
